--- a/student.html
+++ b/student.html
@@ -67,7 +67,7 @@
 					<h2>⭐ Featured Tools</h2>
 					<p class="section-description">Hand-picked premium tools that students love most</p>
 					<div class="tool-cards">
-						<a href="https://app.cluely.com/" target="_blank" class="tool-item featured-item">
+						<a href="https://cluely.com/" target="_blank" class="tool-item featured-item">
 							<h3>Cluely <img src="https://github.com/Delexoo/quoteai.org/raw/refs/heads/main/cluely.ico" alt="Cluely" class="tool-logo"></h3>
 							<p>Live interactive AI study assistant for academic support</p>
 							<span class="tool-tag study">Study</span>
