--- a/student.html
+++ b/student.html
@@ -94,7 +94,7 @@
 					<h2>AI Study Assistants</h2>
 					<p class="section-description">Intelligent AI tools to help with homework, research, and academic writing</p>
 					<div class="tool-cards">
-						<a href="https://app.cluely.com/" target="_blank" class="tool-item">
+						<a href="https://cluely.com/" target="_blank" class="tool-item">
 							<h3>Cluely <img src="https://github.com/Delexoo/quoteai.org/raw/refs/heads/main/cluely.ico" alt="Cluely" class="tool-logo"></h3>
 							<p>Live interactive AI study assistant for academic support</p>
 							<span class="tool-tag study">Study</span>
