--- a/creator.html
+++ b/creator.html
@@ -82,6 +82,21 @@
 							<p>Open-source AI image generator</p>
 							<span class="tool-tag ai">AI Art</span>
 						</a>
+						<a href="https://leonardo.ai" target="_blank" class="tool-item">
+							<h3>Leonardo AI <img src="https://leonardo.ai/favicon.ico" alt="Leonardo AI" class="tool-logo"></h3>
+							<p>AI art generation with advanced controls</p>
+							<span class="tool-tag ai">AI Art</span>
+						</a>
+						<a href="https://playground.ai" target="_blank" class="tool-item">
+							<h3>Playground AI <img src="https://playground.ai/favicon.ico" alt="Playground AI" class="tool-logo"></h3>
+							<p>Free AI image generation and editing</p>
+							<span class="tool-tag ai">AI Art</span>
+						</a>
+						<a href="https://firefly.adobe.com" target="_blank" class="tool-item">
+							<h3>Adobe Firefly <img src="https://firefly.adobe.com/favicon.ico" alt="Adobe Firefly" class="tool-logo"></h3>
+							<p>Adobe's AI image and text generation tool</p>
+							<span class="tool-tag ai">AI Creative</span>
+						</a>
 					</div>
 				</div>
 
@@ -103,6 +118,21 @@
 							<h3>GIMP <img src="https://gimp.org/favicon.ico" alt="GIMP" class="tool-logo"></h3>
 							<p>Free photo editing software</p>
 							<span class="tool-tag converter">Photo</span>
+						</a>
+						<a href="https://www.photopea.com" target="_blank" class="tool-item">
+							<h3>Photopea <img src="https://www.photopea.com/favicon.ico" alt="Photopea" class="tool-logo"></h3>
+							<p>Free online photo editor similar to Photoshop</p>
+							<span class="tool-tag converter">Photo</span>
+						</a>
+						<a href="https://sketch.com" target="_blank" class="tool-item">
+							<h3>Sketch <img src="https://sketch.com/favicon.ico" alt="Sketch" class="tool-logo"></h3>
+							<p>Vector graphics and UI design tool</p>
+							<span class="tool-tag workspace">Vector</span>
+						</a>
+						<a href="https://www.adobe.com/products/illustrator.html" target="_blank" class="tool-item">
+							<h3>Adobe Illustrator <img src="https://www.adobe.com/favicon.ico" alt="Adobe Illustrator" class="tool-logo"></h3>
+							<p>Professional vector graphics software</p>
+							<span class="tool-tag workspace">Vector</span>
 						</a>
 					</div>
 				</div>
@@ -126,6 +156,26 @@
 							<p>Free streaming and recording software</p>
 							<span class="tool-tag converter">Stream</span>
 						</a>
+						<a href="https://loom.com" target="_blank" class="tool-item">
+							<h3>Loom <img src="https://loom.com/favicon.ico" alt="Loom" class="tool-logo"></h3>
+							<p>Easy screen recording and video messaging</p>
+							<span class="tool-tag converter">Screen Record</span>
+						</a>
+						<a href="https://clipchamp.com" target="_blank" class="tool-item">
+							<h3>Clipchamp <img src="https://clipchamp.com/favicon.ico" alt="Clipchamp" class="tool-logo"></h3>
+							<p>Online video editor and creator</p>
+							<span class="tool-tag converter">Video</span>
+						</a>
+						<a href="https://runway.ml" target="_blank" class="tool-item">
+							<h3>Runway ML <img src="https://runway.ml/favicon.ico" alt="Runway ML" class="tool-logo"></h3>
+							<p>AI-powered video editing and generation</p>
+							<span class="tool-tag ai">AI Video</span>
+						</a>
+						<a href="https://reaper.fm" target="_blank" class="tool-item">
+							<h3>REAPER <img src="https://reaper.fm/favicon.ico" alt="REAPER" class="tool-logo"></h3>
+							<p>Professional digital audio workstation</p>
+							<span class="tool-tag audio">DAW</span>
+						</a>
 					</div>
 				</div>
 
@@ -147,6 +197,38 @@
 							<h3>Remove.bg <img src="https://remove.bg/favicon.ico" alt="Remove.bg" class="tool-logo"></h3>
 							<p>AI background removal tool</p>
 							<span class="tool-tag ai">AI Tool</span>
+						</a>
+						<a href="https://pixabay.com" target="_blank" class="tool-item">
+							<h3>Pixabay <img src="https://pixabay.com/favicon.ico" alt="Pixabay" class="tool-logo"></h3>
+							<p>Free images, videos, and music</p>
+							<span class="tool-tag books">Stock</span>
+						</a>
+						<a href="https://iconify.design" target="_blank" class="tool-item">
+							<h3>Iconify <img src="https://iconify.design/favicon.ico" alt="Iconify" class="tool-logo"></h3>
+							<p>Free icon library with thousands of icons</p>
+							<span class="tool-tag workspace">Icons</span>
+						</a>
+						<a href="https://coolors.co" target="_blank" class="tool-item">
+							<h3>Coolors <img src="https://coolors.co/favicon.ico" alt="Coolors" class="tool-logo"></h3>
+							<p>Color palette generator and design tool</p>
+							<span class="tool-tag workspace">Colors</span>
+						</a>
+						<a href="https://buffer.com" target="_blank" class="tool-item">
+							<h3>Buffer <img src="https://buffer.com/favicon.ico" alt="Buffer" class="tool-logo"></h3>
+							<p>Social media management and scheduling</p>
+							<span class="tool-tag ai">Social</span>
+						</a>
+					</div>
+				</div>
+
+				<div class="tool-section">
+					<h2>More Coming Soon</h2>
+					<p class="section-description">Additional creator tools and resources will be added here soon</p>
+					<div class="tool-cards">
+						<a href="https://noot.space/" target="_blank" class="tool-item">
+							<h3>More Tools Coming <img src="https://example.com/favicon.ico" alt="Coming Soon" class="tool-logo"></h3>
+							<p>We're constantly adding new creator tools - check back soon!</p>
+							<span class="tool-tag example">Coming Soon</span>
 						</a>
 					</div>
 				</div>
