--- a/professional.html
+++ b/professional.html
@@ -67,6 +67,11 @@
 					<h2>AI Business Assistants</h2>
 					<p class="section-description">AI-powered tools for professional writing, content creation, and business communication</p>
 					<div class="tool-cards">
+                        <a href="https://sintra.ai" target="_blank" class="tool-item">
+							<h3>Sintra AI <img src="https://sintra.ai/favicon.ico" alt="Sintra AI" class="tool-logo"></h3>
+							<p>AI automation platform for business workflows</p>
+							<span class="tool-tag ai">Automation</span>
+						</a>
 						<a href="https://grammarly.com" target="_blank" class="tool-item">
 							<h3>Grammarly <img src="https://grammarly.com/favicon.ico" alt="Grammarly" class="tool-logo"></h3>
 							<p>Writing assistant for professional communication</p>
@@ -82,6 +87,22 @@
 							<p>AI-powered copywriting tool</p>
 							<span class="tool-tag ai">AI</span>
 						</a>
+						<a href="https://claude.ai" target="_blank" class="tool-item">
+							<h3>Claude <img src="https://claude.ai/favicon.ico" alt="Claude" class="tool-logo"></h3>
+							<p>AI assistant for business analysis and strategy</p>
+							<span class="tool-tag ai">AI</span>
+						</a>
+						<a href="https://writesonic.com" target="_blank" class="tool-item">
+							<h3>Writesonic <img src="https://writesonic.com/favicon.ico" alt="Writesonic" class="tool-logo"></h3>
+							<p>AI writing assistant for marketing content</p>
+							<span class="tool-tag ai">Content</span>
+						</a>
+						<a href="https://tome.app" target="_blank" class="tool-item">
+							<h3>Tome <img src="https://tome.app/favicon.ico" alt="Tome" class="tool-logo"></h3>
+							<p>AI-powered presentation creation tool</p>
+							<span class="tool-tag ai">Presentations</span>
+						</a>
+
 					</div>
 				</div>
 
@@ -103,6 +124,21 @@
 							<h3>Monday.com <img src="https://monday.com/favicon.ico" alt="Monday.com" class="tool-logo"></h3>
 							<p>Work operating system for teams</p>
 							<span class="tool-tag tasks">Project</span>
+						</a>
+						<a href="https://notion.so" target="_blank" class="tool-item">
+							<h3>Notion <img src="https://notion.so/favicon.ico" alt="Notion" class="tool-logo"></h3>
+							<p>All-in-one workspace for teams and projects</p>
+							<span class="tool-tag workspace">Workspace</span>
+						</a>
+						<a href="https://clickup.com" target="_blank" class="tool-item">
+							<h3>ClickUp <img src="https://clickup.com/favicon.ico" alt="ClickUp" class="tool-logo"></h3>
+							<p>Complete productivity and project management platform</p>
+							<span class="tool-tag tasks">Productivity</span>
+						</a>
+						<a href="https://basecamp.com" target="_blank" class="tool-item">
+							<h3>Basecamp <img src="https://basecamp.com/favicon.ico" alt="Basecamp" class="tool-logo"></h3>
+							<p>Simple project management and team collaboration</p>
+							<span class="tool-tag tasks">Teams</span>
 						</a>
 					</div>
 				</div>
@@ -126,6 +162,21 @@
 							<p>Automated scheduling tool</p>
 							<span class="tool-tag tasks">Schedule</span>
 						</a>
+						<a href="https://discord.com" target="_blank" class="tool-item">
+							<h3>Discord <img src="https://discord.com/favicon.ico" alt="Discord" class="tool-logo"></h3>
+							<p>Team communication and voice chat platform</p>
+							<span class="tool-tag community">Voice</span>
+						</a>
+						<a href="https://microsoft.com/teams" target="_blank" class="tool-item">
+							<h3>Microsoft Teams <img src="https://microsoft.com/favicon.ico" alt="Microsoft Teams" class="tool-logo"></h3>
+							<p>Business communication and collaboration platform</p>
+							<span class="tool-tag community">Business</span>
+						</a>
+						<a href="https://whereby.com" target="_blank" class="tool-item">
+							<h3>Whereby <img src="https://whereby.com/favicon.ico" alt="Whereby" class="tool-logo"></h3>
+							<p>Simple video meetings and conferencing</p>
+							<span class="tool-tag community">Video</span>
+						</a>
 					</div>
 				</div>
 
@@ -133,6 +184,11 @@
 					<h2>Analytics & Data</h2>
 					<p class="section-description">Data analysis, visualization, and business intelligence tools for informed decision-making</p>
 					<div class="tool-cards">
+                        <a href="https://funnel.io" target="_blank" class="tool-item">
+							<h3>Funnel.io <img src="https://funnel.io/favicon.ico" alt="Funnel.io" class="tool-logo"></h3>
+							<p>Marketing data collection and attribution platform</p>
+							<span class="tool-tag research">Marketing</span>
+						</a>
 						<a href="https://analytics.google.com" target="_blank" class="tool-item">
 							<h3>Google Analytics <img src="https://analytics.google.com/favicon.ico" alt="Google Analytics" class="tool-logo"></h3>
 							<p>Web analytics and insights</p>
@@ -147,6 +203,33 @@
 							<h3>Airtable <img src="https://airtable.com/favicon.ico" alt="Airtable" class="tool-logo"></h3>
 							<p>Database and spreadsheet hybrid</p>
 							<span class="tool-tag workspace">Database</span>
+						</a>
+						<a href="https://mixpanel.com" target="_blank" class="tool-item">
+							<h3>Mixpanel <img src="https://mixpanel.com/favicon.ico" alt="Mixpanel" class="tool-logo"></h3>
+							<p>Product analytics and user behavior tracking</p>
+							<span class="tool-tag research">Product</span>
+						</a>
+						<a href="https://hotjar.com" target="_blank" class="tool-item">
+							<h3>Hotjar <img src="https://hotjar.com/favicon.ico" alt="Hotjar" class="tool-logo"></h3>
+							<p>Website heatmaps and user session recordings</p>
+							<span class="tool-tag research">UX</span>
+						</a>
+						<a href="https://zapier.com" target="_blank" class="tool-item">
+							<h3>Zapier <img src="https://zapier.com/favicon.ico" alt="Zapier" class="tool-logo"></h3>
+							<p>Workflow automation and app integration platform</p>
+							<span class="tool-tag ai">Automation</span>
+						</a>
+					</div>
+				</div>
+
+				<div class="tool-section">
+					<h2>More Coming Soon</h2>
+					<p class="section-description">Additional professional tools and resources will be added here soon</p>
+					<div class="tool-cards">
+						<a href="https://noot.space/" target="_blank" class="tool-item">
+							<h3>More Tools Coming <img src="https://example.com/favicon.ico" alt="Coming Soon" class="tool-logo"></h3>
+							<p>We're constantly adding new professional tools - check back soon!</p>
+							<span class="tool-tag example">Coming Soon</span>
 						</a>
 					</div>
 				</div>
