--- a/student.html
+++ b/student.html
@@ -240,6 +240,11 @@
 							<p>Text-to-speech tool for listening to documents</p>
 							<span class="tool-tag audio">Audio</span>
 						</a>
+						<a href="https://scribehow.com/" target="_blank" class="tool-item">
+							<h3>Scribe <img src="https://scribehow.com/favicon.ico" alt="Scribe" class="tool-logo"></h3>
+							<p>Automatic step-by-step guide and documentation creator</p>
+							<span class="tool-tag productivity">Docs</span>
+						</a>
 					</div>
 				</div>
 
@@ -323,6 +328,11 @@
 							<p>Math problem solver with instant solutions</p>
 							<span class="tool-tag math">Math</span>
 						</a>
+                        <a href="https://canva.com" target="_blank" class="tool-item">
+							<h3>Canva <img src="https://canva.com/favicon.ico" alt="Canva" class="tool-logo"></h3>
+							<p>Easy-to-use design platform for presentations and graphics</p>
+							<span class="tool-tag workspace">Design</span>
+						</a>
 						<a href="https://character.ai" target="_blank" class="tool-item">
 							<h3>Character.ai <img src="https://character.ai/favicon.ico" alt="Character.ai" class="tool-logo"></h3>
 							<p>AI chatbot for creative conversations and learning</p>
@@ -353,10 +363,22 @@
 							<p>Interactive online whiteboard for collaboration</p>
 							<span class="tool-tag whiteboard">Whiteboard</span>
 						</a>
-						<a href="https://canva.com" target="_blank" class="tool-item">
-							<h3>Canva <img src="https://canva.com/favicon.ico" alt="Canva" class="tool-logo"></h3>
-							<p>Easy-to-use design platform for presentations and graphics</p>
-							<span class="tool-tag workspace">Design</span>
+                        <a href="https://instantly.ai/" target="_blank" class="tool-item">
+							<h3>Instantly <img src="https://instantly.ai/favicon.ico" alt="Instantly" class="tool-logo"></h3>
+							<p>AI-powered email outreach and automation platform</p>
+							<span class="tool-tag ai">Email</span>
+						</a>
+					</div>
+				</div>
+
+				<div class="tool-section">
+					<h2>More Coming Soon</h2>
+					<p class="section-description">Additional student tools and resources will be added here soon</p>
+					<div class="tool-cards">
+						<a href="https://noot.space/" target="_blank" class="tool-item">
+							<h3>More Tools Coming <img src="https://example.com/favicon.ico" alt="Coming Soon" class="tool-logo"></h3>
+							<p>We're constantly adding new student tools - check back soon!</p>
+							<span class="tool-tag example">Coming Soon</span>
 						</a>
 					</div>
 				</div>
