--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 						<p style="color: white !important; position: relative; z-index: 2;">Click here to get started and choose your learning path to discover the perfect tools for your needs.</p>
 					</div>
                     <div class="secret-container">
-					<button class="secret-button" id="secretButton">Secret</button>
+					<button class="secret-button" id="secretButton">Secret Button...</button>
 					<div class="secret-bubble" id="secretBubble">
 						<div class="bubble-header">
 							<h4>🚀 Behind the Code</h4>
