--- a/index.html
+++ b/index.html
@@ -67,7 +67,10 @@
 				<h1>Welcome to Quote</h1>
 				
 				<p>The Internet is your Free Online University. Quote allows you to browse for the latest AI tools, educational resources, media editors, free books, courses, and tons more tools to enhance your digital learning in 2025. No more wasting time searching, everything you need is here in one place. Learn smarter, not harder.</p>
-				<a href="landing.html" class="cta-btn minimal-btn">Start Here!</a>
+				<div class="hero-actions">
+					<a href="landing.html" class="cta-btn minimal-btn">Start Here!</a>
+					<a href="#about" class="learn-more-link">Learn more</a>
+				</div>
 			</div>
 		</section>
 		
@@ -140,7 +143,12 @@
         
 		<section id="contact" class="content-section">
 			<div class="section-content">
-				<h2>Stay In Touch</h2>
+				<div class="contact-header">
+					<h2>Stay In Touch</h2>
+					<a href="https://docs.google.com/forms/d/e/1FAIpQLSdiZ_drgyq8RHPw2pK7gn-ezExGVi0d__g_iny7OaOrERsPUg/viewform?usp=header" target="_blank" class="feedback-btn">
+						📝 Feedback
+					</a>
+				</div>
 				<p>Have questions or want to contribute to our open-source platform? We'd love to hear from you.</p>
 				<div class="contact-info">
 					<p>Coming Soon!</p>
