--- a/creator.html
+++ b/creator.html
@@ -198,6 +198,11 @@
 							<p>AI background removal tool</p>
 							<span class="tool-tag ai">AI Tool</span>
 						</a>
+						<a href="https://www.watermarkremover.io" target="_blank" class="tool-item">
+							<h3>Watermark Remover <img src="https://www.watermarkremover.io/favicon.ico" alt="Watermark Remover" class="tool-logo"></h3>
+							<p>Free AI-powered watermark removal tool</p>
+							<span class="tool-tag ai">AI Tool</span>
+						</a>
 						<a href="https://pixabay.com" target="_blank" class="tool-item">
 							<h3>Pixabay <img src="https://pixabay.com/favicon.ico" alt="Pixabay" class="tool-logo"></h3>
 							<p>Free images, videos, and music</p>
