--- a/student.html
+++ b/student.html
@@ -205,6 +205,11 @@
 					<h2>PDF & Document Tools</h2>
 					<p class="section-description">PDF editing, splitting, and document management tools for academic work</p>
 					<div class="tool-cards">
+                        <a href="https://www.web2pdfconvert.com" target="_blank" class="tool-item">
+							<h3>Website to .pdf <img src="https://www.web2pdfconvert.com" alt="Webite to .pdf" class="tool-logo"></h3>
+							<p>Immersive reader with text-to-speech (mobile free)</p>
+							<span class="tool-tag pdf">PDF</span>
+						</a>
 						<a href="https://elevenlabs.io/" target="_blank" class="tool-item">
 							<h3>ElevenLabs <img src="https://elevenlabs.io/favicon.ico" alt="ElevenLabs" class="tool-logo"></h3>
 							<p>Immersive reader with text-to-speech (mobile free)</p>
