--- a/student.html
+++ b/student.html
@@ -11,7 +11,7 @@
 	<canvas id="bg-graph"></canvas>
 	<header>
 		<nav class="navbar minimal-navbar">
-			<div class="logo"><a href="index.html">Quoteai.org</a></div>
+			<div class="logo"><a href="index.html">quoteai.org</a></div>
 			<div class="nav-and-menu">
 				<div class="search-container">
 					<img src="https://img.icons8.com/ios-filled/50/000000/search.png" alt="Search" class="search-icon">
@@ -205,9 +205,9 @@
 					<h2>PDF & Document Tools</h2>
 					<p class="section-description">PDF editing, splitting, and document management tools for academic work</p>
 					<div class="tool-cards">
-                        <a href="https://www.web2pdfconvert.com" target="_blank" class="tool-item">
-							<h3>Website to .pdf <img src="https://www.web2pdfconvert.com" alt="Webite to .pdf" class="tool-logo"></h3>
-							<p>Immersive reader with text-to-speech (mobile free)</p>
+                        <a href="https://webtopdf.com" target="_blank" class="tool-item">
+							<h3>Website to .pdf <img src="https://webtopdf.com" alt="Webite to .pdf" class="tool-logo"></h3>
+							<p>Convert a Website (link) into a PDF document</p>
 							<span class="tool-tag pdf">PDF</span>
 						</a>
 						<a href="https://elevenlabs.io/" target="_blank" class="tool-item">
@@ -223,6 +223,11 @@
 						<a href="https://www.ilovepdf.com/word_to_pdf" target="_blank" class="tool-item">
 							<h3>.docx to .pdf <img src="https://www.ilovepdf.com/favicon.ico" alt="iLovePDF" class="tool-logo"></h3>
 							<p>Convert Word documents to PDF format easily</p>
+							<span class="tool-tag converter">Converter</span>
+						</a>
+						<a href="https://www.ilovepdf.com/powerpoint_to_pdf" target="_blank" class="tool-item">
+							<h3>PowerPoint to .pdf <img src="https://www.ilovepdf.com/favicon.ico" alt="iLovePDF" class="tool-logo"></h3>
+							<p>Convert PowerPoint presentations to PDF format</p>
 							<span class="tool-tag converter">Converter</span>
 						</a>
 						<a href="https://www.microsoft.com/en-us/microsoft-365/onedrive/online-cloud-storage" target="_blank" class="tool-item">
