--- a/landing.html
+++ b/landing.html
@@ -11,7 +11,7 @@
 	<canvas id="bg-graph"></canvas>
 	<header>
 		<nav class="navbar minimal-navbar">
-			<div class="logo"><a href="index.html">Quoteai.org</a></div>
+			<div class="logo"><a href="index.html">quoteai.org</a></div>
 			<div class="nav-and-menu">
 				<div class="search-container">
 					<img src="https://img.icons8.com/ios-filled/50/000000/search.png" alt="Search" class="search-icon">
