--- a/professional.html
+++ b/professional.html
@@ -48,6 +48,11 @@
 					<p>Design tools, content creation, and creative resources</p>
 					<a href="creator.html" class="dropdown-button">Enter Creator Hub</a>
 				</div>
+				<div class="dropdown-button-item">
+					<h3>🔧 All Tools</h3>
+					<p>Browse our complete collection of tools and resources</p>
+					<a href="all-tools.html" class="dropdown-button">View All Tools</a>
+				</div>
 			</div>
 		</div>
 	</header>
@@ -246,6 +251,7 @@
 							<li><a href="professional.html">Professional Hub</a></li>
 							<li><a href="creator.html">Creator Hub</a></li>
 							<li><a href="landing.html">Get Started</a></li>
+							<li><a href="all-tools.html">All Tools</a></li>
 						</ul>
 					</div>
 					<div class="footer-column">
