--- a/landing.html
+++ b/landing.html
@@ -48,6 +48,11 @@
 					<p>Design tools, content creation, and creative resources</p>
 					<a href="creator.html" class="dropdown-button">Enter Creator Hub</a>
 				</div>
+				<div class="dropdown-button-item">
+					<h3>🔧 All Tools</h3>
+					<p>Browse our complete collection of tools and resources</p>
+					<a href="all-tools.html" class="dropdown-button">View All Tools</a>
+				</div>
 			</div>
 		</div>
 	</header>
@@ -75,6 +80,9 @@
 						<p>Content creation tools, design software, and creative resources</p>
 					</a>
 				</div>
+				<div style="text-align:center; margin-top:1.5rem;">
+					<a href="all-tools.html" class="cta-btn minimal-btn" style="font-size:0.9rem; padding:0.5rem 1.2rem; border-radius:20px; background:#fff; color:#111; display:inline-block; border:2px solid #222;">All Tools</a>
+                </div>
 			</div>
 		</section>
 		
@@ -88,6 +96,7 @@
 							<li><a href="professional.html">Professional Hub</a></li>
 							<li><a href="creator.html">Creator Hub</a></li>
 							<li><a href="landing.html">Get Started</a></li>
+							<li><a href="all-tools.html">All Tools</a></li>
 						</ul>
 					</div>
 					<div class="footer-column">
