--- a/landing.html
+++ b/landing.html
@@ -81,7 +81,7 @@
 					</a>
 				</div>
 				<div style="text-align:center; margin-top:1.5rem;">
-					<a href="all-tools.html" class="cta-btn minimal-btn" style="font-size:0.9rem; padding:0.5rem 1.2rem; border-radius:20px; background:#fff; color:#111; display:inline-block; border:2px solid #222;">All Tools</a>
+					<a href="all-tools.html" class="all-tools-cta">All Tools</a>
                 </div>
 			</div>
 		</section>
