--- a/all-tools.html
+++ b/all-tools.html
@@ -53,6 +53,12 @@
             transform: translate(-50%, -50%);
         }
         
+        @media (max-width: 768px) {
+            .cursor, .cursor-follower {
+                display: none;
+            }
+        }
+        
         .cursor-follower {
             width: 40px;
             height: 40px;
