--- a/index.html
+++ b/index.html
@@ -255,6 +255,12 @@
             transform: translate(-50%, -50%);
         }
         
+        @media (max-width: 768px) {
+            .cursor, .cursor-follower {
+                display: none;
+            }
+        }
+        
         .cursor-follower {
             width: 40px;
             height: 40px;
@@ -582,11 +588,11 @@
             <p class="text-xl md:text-2xl text-gray-300 mb-10" data-aos="fade-up" data-aos-delay="100">
                 Browse for the latest AI study tools, educational resources, media editors, free books, courses, and tons more tools to enhance your digital experience in 2025. No more wasting time searching, everything you need is here in one place.
             </p>
-            <div class="flex flex-col sm:flex-row justify-center gap-4" data-aos="fade-up" data-aos-delay="200">
-                <a href="landing.html" class="glass-card px-8 py-3 rounded-full text-white font-medium hover-effect button-glow border border-white border-opacity-20 inline-block text-center">
+            <div class="flex flex-row justify-center gap-2 md:gap-4" data-aos="fade-up" data-aos-delay="200">
+                <a href="landing.html" class="glass-card px-4 md:px-8 py-2 md:py-3 rounded-full text-white font-medium hover-effect button-glow border border-white border-opacity-20 inline-block text-center text-sm md:text-base">
                     Start Here!
                 </a>
-                <button class="glass-card px-8 py-3 rounded-full text-white font-medium hover-effect button-glow border border-white border-opacity-20" onclick="document.querySelector('#about').scrollIntoView({behavior: 'smooth'})">
+                <button class="glass-card px-4 md:px-8 py-2 md:py-3 rounded-full text-white font-medium hover-effect button-glow border border-white border-opacity-20 text-sm md:text-base" onclick="document.querySelector('#about').scrollIntoView({behavior: 'smooth'})">
                     Learn More!
                 </button>
             </div>
@@ -616,12 +622,12 @@
                     <p class="text-gray-800 mb-8 text-lg leading-relaxed">
                         Browse through our fully handpicked collection of the finest AI assistants, educational platforms, productivity software, and creative tools available in 2025, organizing them into three specialized pathways for maximum efficiency.
                     </p>
-                    <div class="flex flex-col sm:flex-row gap-4">
-                        <a href="dev.html" class="glass-card px-6 py-3 rounded-full text-black font-medium hover-effect button-glow inline-flex items-center justify-center">
-                            Meet the Team <i data-feather="users" class="ml-2 w-4 h-4"></i>
+                    <div class="flex flex-row gap-2 md:gap-4">
+                        <a href="dev.html" class="glass-card px-3 md:px-6 py-2 md:py-3 rounded-full text-black font-medium hover-effect button-glow inline-flex items-center justify-center text-sm md:text-base">
+                            Meet the Team <i data-feather="users" class="ml-1 md:ml-2 w-3 h-3 md:w-4 md:h-4"></i>
                         </a>
-                        <a href="landing.html" class="glass-card px-6 py-3 rounded-full text-black font-medium hover-effect button-glow inline-flex items-center justify-center">
-                            Get Started <i data-feather="arrow-right" class="ml-2 w-4 h-4"></i>
+                        <a href="landing.html" class="glass-card px-3 md:px-6 py-2 md:py-3 rounded-full text-black font-medium hover-effect button-glow inline-flex items-center justify-center text-sm md:text-base">
+                            Get Started <i data-feather="arrow-right" class="ml-1 md:ml-2 w-3 h-3 md:w-4 md:h-4"></i>
                         </a>
                     </div>
                 </div>
