--- a/landing.html
+++ b/landing.html
@@ -170,30 +170,30 @@
         
         <div class="text-center max-w-7xl mx-auto relative z-10">
             <!-- Header Section -->
-            <div class="mb-12" data-aos="fade-up">
-                <h1 class="text-4xl md:text-6xl font-bold mb-6 text-white leading-tight">
+            <div class="mb-4 md:mb-12" data-aos="fade-up">
+                <h1 class="text-2xl md:text-6xl font-bold mb-2 md:mb-6 text-white leading-tight">
                     Choose Your <span class="text-transparent bg-clip-text bg-gradient-to-r from-blue-400 via-purple-500 to-pink-500">Pathway</span>
                 </h1>
-                <p class="text-lg md:text-xl text-gray-300 mb-4 max-w-3xl mx-auto leading-relaxed">
+                <p class="text-sm md:text-xl text-gray-300 mb-2 md:mb-4 max-w-3xl mx-auto leading-relaxed">
                     Discover the perfect tools and resources tailored to your specific needs and goals
                 </p>
-                <div class="w-16 h-1 bg-gradient-to-r from-blue-400 to-purple-500 mx-auto rounded-full"></div>
+                <div class="w-8 md:w-16 h-1 bg-gradient-to-r from-blue-400 to-purple-500 mx-auto rounded-full"></div>
             </div>
             
             <!-- Role Selection Cards -->
-            <div class="grid grid-cols-3 md:grid-cols-3 gap-4 md:gap-6 mb-12" data-aos="fade-up" data-aos-delay="200">
+            <div class="grid grid-cols-3 md:grid-cols-3 gap-2 md:gap-6 mb-8 md:mb-12" data-aos="fade-up" data-aos-delay="200">
                 <!-- Student Card -->
-                <div class="role-card glass-card p-4 md:p-6 rounded-xl cursor-pointer group relative overflow-hidden" onclick="window.location.href='student.html'">
+                <div class="role-card glass-card p-2 md:p-6 rounded-xl cursor-pointer group relative overflow-hidden" onclick="window.location.href='student.html'">
                     <div class="absolute inset-0 bg-gradient-to-br from-blue-500/10 to-purple-500/10 opacity-0 group-hover:opacity-100 transition-opacity duration-500"></div>
                     <div class="relative z-10">
-                        <div class="w-12 h-12 md:w-16 md:h-16 bg-gradient-to-br from-blue-400 to-blue-600 rounded-xl flex items-center justify-center mb-4 mx-auto shadow-lg">
-                            <i data-feather="graduation-cap" class="text-white w-6 h-6 md:w-8 md:h-8"></i>
+                        <div class="w-8 h-8 md:w-16 md:h-16 bg-gradient-to-br from-blue-400 to-blue-600 rounded-xl flex items-center justify-center mb-2 md:mb-4 mx-auto shadow-lg">
+                            <i data-feather="graduation-cap" class="text-white w-4 h-4 md:w-8 md:h-8"></i>
                         </div>
-                        <h3 class="text-lg md:text-xl font-bold mb-3 text-white group-hover:text-blue-300 transition-colors duration-300">Student</h3>
-                        <p class="text-gray-300 mb-4 text-xs md:text-sm leading-relaxed">
+                        <h3 class="text-sm md:text-xl font-bold mb-2 md:mb-3 text-white group-hover:text-blue-300 transition-colors duration-300">Student</h3>
+                        <p class="text-gray-300 mb-2 md:mb-4 text-xs md:text-sm leading-relaxed">
                             Essential tools for academic success.
                         </p>
-                        <div class="space-y-2 text-gray-300">
+                        <div class="space-y-2 text-gray-300 hidden md:block">
                             <div class="flex items-center">
                                 <div class="w-1.5 h-1.5 bg-blue-400 rounded-full mr-2"></div>
                                 <span class="text-xs">AI Writing</span>
@@ -214,17 +214,17 @@
                 </div>
 
                 <!-- Professional Card -->
-                <div class="role-card glass-card p-4 md:p-6 rounded-xl cursor-pointer group relative overflow-hidden" onclick="window.location.href='professional.html'">
+                <div class="role-card glass-card p-2 md:p-6 rounded-xl cursor-pointer group relative overflow-hidden" onclick="window.location.href='professional.html'">
                     <div class="absolute inset-0 bg-gradient-to-br from-green-500/10 to-emerald-500/10 opacity-0 group-hover:opacity-100 transition-opacity duration-500"></div>
                     <div class="relative z-10">
-                        <div class="w-12 h-12 md:w-16 md:h-16 bg-gradient-to-br from-green-400 to-green-600 rounded-xl flex items-center justify-center mb-4 mx-auto shadow-lg">
-                            <i data-feather="briefcase" class="text-white w-6 h-6 md:w-8 md:h-8"></i>
+                        <div class="w-8 h-8 md:w-16 md:h-16 bg-gradient-to-br from-green-400 to-green-600 rounded-xl flex items-center justify-center mb-2 md:mb-4 mx-auto shadow-lg">
+                            <i data-feather="briefcase" class="text-white w-4 h-4 md:w-8 md:h-8"></i>
                         </div>
-                        <h3 class="text-lg md:text-xl font-bold mb-3 text-white group-hover:text-green-300 transition-colors duration-300">Professional</h3>
-                        <p class="text-gray-300 mb-4 text-xs md:text-sm leading-relaxed">
+                        <h3 class="text-sm md:text-xl font-bold mb-2 md:mb-3 text-white group-hover:text-green-300 transition-colors duration-300">Professional</h3>
+                        <p class="text-gray-300 mb-2 md:mb-4 text-xs md:text-sm leading-relaxed">
                             Productivity tools for work.
                         </p>
-                        <div class="space-y-2 text-gray-300">
+                        <div class="space-y-2 text-gray-300 hidden md:block">
                             <div class="flex items-center">
                                 <div class="w-1.5 h-1.5 bg-green-400 rounded-full mr-2"></div>
                                 <span class="text-xs">Management</span>
@@ -245,17 +245,17 @@
                 </div>
 
                 <!-- Creator Card -->
-                <div class="role-card glass-card p-4 md:p-6 rounded-xl cursor-pointer group relative overflow-hidden" onclick="window.location.href='creator.html'">
+                <div class="role-card glass-card p-2 md:p-6 rounded-xl cursor-pointer group relative overflow-hidden" onclick="window.location.href='creator.html'">
                     <div class="absolute inset-0 bg-gradient-to-br from-pink-500/10 to-purple-500/10 opacity-0 group-hover:opacity-100 transition-opacity duration-500"></div>
                     <div class="relative z-10">
-                        <div class="w-12 h-12 md:w-16 md:h-16 bg-gradient-to-br from-pink-400 to-purple-600 rounded-xl flex items-center justify-center mb-4 mx-auto shadow-lg">
-                            <i data-feather="palette" class="text-white w-6 h-6 md:w-8 md:h-8"></i>
+                        <div class="w-8 h-8 md:w-16 md:h-16 bg-gradient-to-br from-pink-400 to-purple-600 rounded-xl flex items-center justify-center mb-2 md:mb-4 mx-auto shadow-lg">
+                            <i data-feather="palette" class="text-white w-4 h-4 md:w-8 md:h-8"></i>
                         </div>
-                        <h3 class="text-lg md:text-xl font-bold mb-3 text-white group-hover:text-pink-300 transition-colors duration-300">Creator</h3>
-                        <p class="text-gray-300 mb-4 text-xs md:text-sm leading-relaxed">
+                        <h3 class="text-sm md:text-xl font-bold mb-2 md:mb-3 text-white group-hover:text-pink-300 transition-colors duration-300">Creator</h3>
+                        <p class="text-gray-300 mb-2 md:mb-4 text-xs md:text-sm leading-relaxed">
                             Creative tools and platforms.
                         </p>
-                        <div class="space-y-2 text-gray-300">
+                        <div class="space-y-2 text-gray-300 hidden md:block">
                             <div class="flex items-center">
                                 <div class="w-1.5 h-1.5 bg-pink-400 rounded-full mr-2"></div>
                                 <span class="text-xs">Design</span>
@@ -278,12 +278,13 @@
 
             <!-- All Tools Button -->
             <div class="text-center" data-aos="fade-up" data-aos-delay="400">
-                <button class="group glass-card px-8 md:px-12 py-3 md:py-4 rounded-xl text-white font-semibold hover-effect border border-white border-opacity-20 text-base md:text-lg relative overflow-hidden" onclick="window.location.href='all-tools.html'">
+                <button class="group glass-card px-4 md:px-12 py-2 md:py-4 rounded-xl text-white font-semibold hover-effect border border-white border-opacity-20 text-sm md:text-lg relative overflow-hidden" onclick="window.location.href='all-tools.html'">
                     <div class="absolute inset-0 bg-gradient-to-r from-blue-500/20 to-purple-500/20 opacity-0 group-hover:opacity-100 transition-opacity duration-500"></div>
                     <div class="relative z-10 flex items-center justify-center">
-                        <i data-feather="grid" class="w-4 h-4 md:w-5 md:h-5 mr-2 md:mr-3"></i>
-                        Browse All Tools
-                        <i data-feather="arrow-right" class="w-4 h-4 md:w-5 md:h-5 ml-2 md:ml-3 group-hover:translate-x-1 transition-transform duration-300"></i>
+                        <i data-feather="grid" class="w-3 h-3 md:w-5 md:h-5 mr-1 md:mr-3"></i>
+                        <span class="hidden md:inline">Browse All Tools</span>
+                        <span class="md:hidden">All Tools</span>
+                        <i data-feather="arrow-right" class="w-3 h-3 md:w-5 md:h-5 ml-1 md:ml-3 group-hover:translate-x-1 transition-transform duration-300"></i>
                     </div>
                 </button>
             </div>
