--- a/landing.html
+++ b/landing.html
@@ -170,14 +170,14 @@
         
         <div class="text-center max-w-7xl mx-auto relative z-10">
             <!-- Header Section -->
-            <div class="mb-4 md:mb-12" data-aos="fade-up">
-                <h1 class="text-2xl md:text-6xl font-bold mb-2 md:mb-6 text-white leading-tight">
+            <div class="mb-8 md:mb-12" data-aos="fade-up">
+                <h1 class="text-3xl md:text-6xl font-bold mb-4 md:mb-6 text-white leading-tight">
                     Choose Your <span class="text-transparent bg-clip-text bg-gradient-to-r from-blue-400 via-purple-500 to-pink-500">Pathway</span>
                 </h1>
-                <p class="text-sm md:text-xl text-gray-300 mb-2 md:mb-4 max-w-3xl mx-auto leading-relaxed">
+                <p class="text-base md:text-xl text-gray-300 mb-3 md:mb-4 max-w-3xl mx-auto leading-relaxed">
                     Discover the perfect tools and resources tailored to your specific needs and goals
                 </p>
-                <div class="w-8 md:w-16 h-1 bg-gradient-to-r from-blue-400 to-purple-500 mx-auto rounded-full"></div>
+                <div class="w-12 md:w-16 h-1 bg-gradient-to-r from-blue-400 to-purple-500 mx-auto rounded-full"></div>
             </div>
             
             <!-- Role Selection Cards -->
