--- a/professional.html
+++ b/professional.html
@@ -87,10 +87,13 @@
                 font-size: 0.5rem !important;
                 line-height: 1.2;
                 margin-bottom: 0.25rem !important;
-                display: -webkit-box !important;
-                -webkit-line-clamp: 2 !important;
-                -webkit-box-orient: vertical !important;
-                overflow: hidden !important;
+                display: block !important;
+                white-space: normal !important;
+                overflow: visible !important;
+                text-overflow: unset !important;
+                -webkit-line-clamp: unset !important;
+                -webkit-box-orient: unset !important;
+                text-align: center !important;
             }
             
             .tool-card img {
