--- a/creator.html
+++ b/creator.html
@@ -73,7 +73,7 @@
                 flex-direction: column !important;
                 align-items: center !important;
                 flex-grow: 1 !important;
-                justify-content: center !important;
+                justify-content: flex-start !important;
                 margin-bottom: 0.25rem !important;
             }
             
@@ -94,6 +94,7 @@
                 -webkit-line-clamp: unset !important;
                 -webkit-box-orient: unset !important;
                 text-align: center !important;
+                order: 2 !important;
             }
             
             .tool-card img {
