--- a/leaderboard.html
+++ b/leaderboard.html
@@ -354,7 +354,6 @@
             height: 55px;
             border-radius: 12px;
             object-fit: cover;
-            border: 3px solid rgba(255, 255, 255, 0.2);
             transition: all 0.4s ease;
             position: relative;
             overflow: hidden;
@@ -958,7 +957,7 @@
                                 <div class="school-badge">
                                     <span>🎓</span>
                                     <!-- SCHOOL: Replace with actual school name -->
-                                    <span>Cal State University San Marcos</span>
+                                    <span>University San Marcos</span>
                                 </div>
                             </div>
                         </div>
