--- a/index.html
+++ b/index.html
@@ -1642,7 +1642,7 @@
         <div class="flex items-center justify-between">
             <div class="flex items-center">
                 <i data-feather="monitor" class="w-5 h-5 mr-3"></i>
-                <span class="text-sm font-medium">View website on Desktop for the best experience</span>
+                <span class="text-sm font-medium">View website on Desktop for full site</span>
             </div>
             <button onclick="closeMobileNotification()" class="text-white hover:text-gray-200 transition-colors duration-200">
                 <i data-feather="x" class="w-5 h-5"></i>
