--- a/index.html
+++ b/index.html
@@ -1625,9 +1625,9 @@
                 <div>
                     <h3 class="text-xl font-bold mb-4 text-white">Connect</h3>
                     <ul class="space-y-2">
-                        <li><a href="#" class="text-gray-300 hover:text-white">Creator Store</a></li>
+                        <li><a href="http://beacons.ai/delexo" target="_blank" class="donate-btn-footer text-gray-300 hover:text-white cursor-pointer">Creator Store</a></li>
                         <li><a href="https://buy.stripe.com/9B63cu3RE2ouaKgcHLcjS00" target="_blank" class="donate-btn-footer text-gray-300 hover:text-white cursor-pointer">Donate</a></li>
-                        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdiZ_drgyq8RHPw2pK7gn-ezExGVi0d__g_iny7OaOrERsPUg/viewform" target="_blank" class="text-gray-300 hover:text-white">Contact us</a></li>
+                        <li><a href="dev.html" class="text-gray-300 hover:text-white">Contact us</a></li>
                     </ul>
                 </div>
             </div>
@@ -2095,7 +2095,7 @@
                 { name: 'Developer', url: 'dev.html', type: 'page' },
                 { name: 'Creator Store', url: '#', type: 'page' },
                 { name: 'Donate', url: 'https://buy.stripe.com/9B63cu3RE2ouaKgcHLcjS00', type: 'page' },
-                { name: 'Contact us', url: '#', type: 'page' }
+                { name: 'Contact us', url: 'dev.html', type: 'page' }
             ],
             tools: [
                 { name: 'ChatGPT', category: 'AI', description: 'AI-powered conversational assistant' },
