--- a/student.html
+++ b/student.html
@@ -1181,7 +1181,7 @@
                     <ul class="space-y-2">
                         <li><a href="#" class="text-gray-300 hover:text-white">Creator Store</a></li>
                         <li><a href="https://buy.stripe.com/9B63cu3RE2ouaKgcHLcjS00" target="_blank" class="donate-btn-footer text-gray-300 hover:text-white cursor-pointer">Donate</a></li>
-                        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdiZ_drgyq8RHPw2pK7gn-ezExGVi0d__g_iny7OaOrERsPUg/viewform" target="_blank" class="text-gray-300 hover:text-white">Contact us</a></li>
+                        <li><a href="dev.html" class="text-gray-300 hover:text-white">Contact us</a></li>
                     </ul>
                 </div>
             </div>
