--- a/all-tools.html
+++ b/all-tools.html
@@ -312,6 +312,19 @@
     <nav class="fixed w-full z-50 py-2 md:py-4 px-4 md:px-12">
         <div class="flex justify-between items-center glass-card px-4 md:px-6 py-2 md:py-3">
             <a href="index.html" class="nav-logo text-lg md:text-xl font-bold text-white hover-effect">quoteai.org</a>
+            
+            <!-- Search Bar -->
+            <div class="hidden md:flex flex-1 max-w-md mx-8 relative">
+                <div class="search-container w-full relative">
+                    <input type="text" id="searchInput" placeholder="Search tools, pages..." 
+                           class="w-full px-4 py-2 pl-10 pr-4 bg-white bg-opacity-10 border border-white border-opacity-20 rounded-full text-white placeholder-gray-300 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent transition-all duration-300">
+                    <i data-feather="search" class="absolute left-3 top-1/2 transform -translate-y-1/2 w-4 h-4 text-gray-300"></i>
+                    <div id="searchResults" class="absolute top-full left-0 right-0 mt-2 bg-gray-900 border border-gray-700 rounded-xl shadow-lg max-h-96 overflow-y-auto z-50 hidden">
+                        <!-- Search results will be populated here -->
+                    </div>
+                </div>
+            </div>
+            
             <div class="hidden md:flex space-x-8 items-center">
                 <a href="index.html" class="nav-link text-white font-bold">Home</a>
                 <a href="student.html" class="nav-link text-white font-bold">Student</a>
@@ -324,6 +337,17 @@
                 </a>
             </div>
             <div class="flex items-center space-x-2 md:hidden">
+                <!-- Mobile Search Bar -->
+                <div class="flex-1 max-w-xs mr-2 relative">
+                    <div class="search-container w-full relative">
+                        <input type="text" id="mobileNavSearchInput" placeholder="Search..." 
+                               class="w-full px-3 py-1.5 pl-8 pr-3 bg-white bg-opacity-10 border border-white border-opacity-20 rounded-full text-white placeholder-gray-300 focus:outline-none focus:ring-1 focus:ring-blue-500 focus:border-transparent transition-all duration-300 text-xs">
+                        <i data-feather="search" class="absolute left-2.5 top-1/2 transform -translate-y-1/2 w-3 h-3 text-gray-300"></i>
+                        <div id="mobileNavSearchResults" class="absolute top-full left-0 right-0 mt-1 bg-gray-900 border border-gray-700 rounded-lg shadow-lg max-h-48 overflow-y-auto z-50 hidden">
+                            <!-- Mobile nav search results will be populated here -->
+                        </div>
+                    </div>
+                </div>
                 <a href="https://buy.stripe.com/9B63cu3RE2ouaKgcHLcjS00" target="_blank" class="donate-btn px-2 py-1 bg-gradient-to-r from-orange-500 to-orange-600 text-white font-bold rounded-full text-xs">
                     Donate
                 </a>
@@ -866,9 +890,9 @@
                 <div>
                     <h3 class="text-xl font-bold mb-4 text-white">Connect</h3>
                     <ul class="space-y-2">
-                        <li><a href="#" class="text-gray-300 hover:text-white">Creator Store</a></li>
+                        <li><a href="http://beacons.ai/delexo" target="_blank" class="donate-btn-footer text-gray-300 hover:text-white cursor-pointer">Creator Store</a></li>
                         <li><a href="https://buy.stripe.com/9B63cu3RE2ouaKgcHLcjS00" target="_blank" class="donate-btn-footer text-gray-300 hover:text-white cursor-pointer">Donate</a></li>
-                        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdiZ_drgyq8RHPw2pK7gn-ezExGVi0d__g_iny7OaOrERsPUg/viewform" target="_blank" class="text-gray-300 hover:text-white">Contact us</a></li>
+                        <li><a href="dev.html" class="text-gray-300 hover:text-white">Contact us</a></li>
                     </ul>
                 </div>
             </div>
