--- a/all-tools.html
+++ b/all-tools.html
@@ -609,7 +609,7 @@
                         </div>
                         <span class="tool-tag bg-red-400 bg-opacity-20 text-red-400">Movies</span>
                     </div>
-                    <p class="text-gray-300 text-sm">Coming Very Soon! Stay Tuned!</p>
+                    <p class="text-gray-300 text-sm">Coming Very Soon! Stay Tuned! Shh...</p>
                 </div>
                 
                 <!-- Professional Tools -->
