--- a/student.html
+++ b/student.html
@@ -663,7 +663,7 @@
                             </div>
                             <span class="tool-tag bg-red-400 bg-opacity-20 text-red-400">Movies</span>
                         </div>
-                        <p class="text-gray-300 text-sm">Coming Very Soon! Stay Tuned!</p>
+                        <p class="text-gray-300 text-sm">Coming Very Soon! Stay Tuned! Shh...</p>
                     </div>
                     
                 </div>
@@ -1192,7 +1192,7 @@
                             <img src="https://github.com/Delexoo/quoteai.org/blob/main/clip.png?raw=true" alt="Free Movies" class="w-8 h-8 mr-3">
                             <h3 class="text-xl font-bold text-white">Free Movies</h3>
                         </div>
-                        <p class="text-gray-300 mb-4 text-sm">Coming Very Soon! Stay Tuned!</p>
+                        <p class="text-gray-300 mb-4 text-sm">Coming Very Soon! Stay Tuned! Shh...</p>
                         <span class="inline-block bg-red-400 bg-opacity-20 text-red-400 text-xs px-3 py-1 rounded-full">Movies</span>
                     </div>
                 </div>
