--- a/index.html
+++ b/index.html
@@ -1205,7 +1205,7 @@
             
             <!-- Navigation Links - Equally Distributed -->
             <div class="hidden lg:flex justify-between items-center flex-1 mx-8">
-                <a href="#" class="text-gray-200 hover:text-white font-medium text-sm transition-colors duration-300 hover:scale-105">Student</a>
+                <a href="student.html" class="text-gray-200 hover:text-white font-medium text-sm transition-colors duration-300 hover:scale-105">Student</a>
                 <a href="#" class="text-gray-200 hover:text-white font-medium text-sm transition-colors duration-300 hover:scale-105">Professional</a>
                 <a href="#" class="text-gray-200 hover:text-white font-medium text-sm transition-colors duration-300 hover:scale-105">Automation</a>
                 <a href="#" class="text-gray-200 hover:text-white font-medium text-sm transition-colors duration-300 hover:scale-105">Creator</a>
@@ -1227,7 +1227,7 @@
             
             <!-- Medium screen navigation (shows fewer items) -->
             <div class="hidden md:flex lg:hidden space-x-6 items-center">
-                <a href="#" class="text-gray-200 hover:text-white font-medium text-sm transition-colors duration-300">Student</a>
+                <a href="student.html" class="text-gray-200 hover:text-white font-medium text-sm transition-colors duration-300">Student</a>
                 <a href="#" class="text-gray-200 hover:text-white font-medium text-sm transition-colors duration-300">Professional</a>
                 <a href="#" class="text-gray-200 hover:text-white font-medium text-sm transition-colors duration-300">Automation</a>
                 <a href="#" class="text-gray-200 hover:text-white font-medium text-sm transition-colors duration-300">Creator</a>
@@ -1247,7 +1247,7 @@
         <!-- Mobile Menu -->
         <div id="mobile-menu" class="hidden md:hidden mt-3 bg-white bg-opacity-5 backdrop-blur-md px-6 py-4 rounded-2xl border border-white border-opacity-10 shadow-xl">
             <div class="grid grid-cols-2 gap-3">
-                <a href="#" class="text-gray-200 hover:text-white font-medium px-4 py-3 text-sm bg-white bg-opacity-5 hover:bg-opacity-10 rounded-lg transition-all duration-300 text-center">Student</a>
+                <a href="student.html" class="text-gray-200 hover:text-white font-medium px-4 py-3 text-sm bg-white bg-opacity-5 hover:bg-opacity-10 rounded-lg transition-all duration-300 text-center">Student</a>
                 <a href="#" class="text-gray-200 hover:text-white font-medium px-4 py-3 text-sm bg-white bg-opacity-5 hover:bg-opacity-10 rounded-lg transition-all duration-300 text-center">Professional</a>
                 <a href="#" class="text-gray-200 hover:text-white font-medium px-4 py-3 text-sm bg-white bg-opacity-5 hover:bg-opacity-10 rounded-lg transition-all duration-300 text-center">Automation</a>
                 <a href="#" class="text-gray-200 hover:text-white font-medium px-4 py-3 text-sm bg-white bg-opacity-5 hover:bg-opacity-10 rounded-lg transition-all duration-300 text-center">Creator</a>
