--- a/all-tools.html
+++ b/all-tools.html
@@ -472,7 +472,7 @@
                 <a href="https://cluely.com/" target="_blank" class="tool-card glass-card p-6 rounded-xl hover-effect group" data-category="student ai" data-aos="fade-up" data-aos-delay="200">
                     <div class="tool-header">
                         <div class="tool-title-section">
-                        <img src="https://github.com/Delexoo/quoteai.org/raw/refs/heads/main/cluely.ico" alt="Cluely" class="w-8 h-8 mr-3">
+                        <img src="https://raw.githubusercontent.com/Delexoo/quoteai.org/refs/heads/main/docs/cluely.jpg" alt="Cluely" class="w-8 h-8 mr-3">
                         <h3 class="text-xl font-bold text-white">Cluely</h3>
                     </div>
                         <span class="tool-tag bg-blue-400 bg-opacity-20 text-blue-400">Study</span>
@@ -483,7 +483,7 @@
                 <a href="https://chat.qwen.ai/" target="_blank" class="tool-card glass-card p-6 rounded-xl hover-effect group" data-category="student ai" data-aos="fade-up" data-aos-delay="300">
                     <div class="tool-header">
                         <div class="tool-title-section">
-                        <img src="https://github.com/Delexoo/quoteai.org/raw/refs/heads/main/qwen.ico" alt="Qwen" class="w-8 h-8 mr-3">
+                        <img src="https://raw.githubusercontent.com/Delexoo/quoteai.org/refs/heads/main/docs/qwen.jpg" alt="Qwen" class="w-8 h-8 mr-3">
                         <h3 class="text-xl font-bold text-white">Qwen</h3>
                     </div>
                         <span class="tool-tag bg-purple-400 bg-opacity-20 text-purple-400">AI</span>
