--- a/leaderboard.html
+++ b/leaderboard.html
@@ -949,7 +949,7 @@
                     <div class="leaderboard-entry">
                         <div class="rank-badge">1</div>
                         <div class="profile-section" style="margin-top: 8px;">
-                            <img src="https://raw.githubusercontent.com/Delexoo/quoteai.org/refs/heads/main/J.png" 
+                            <img src="https://raw.githubusercontent.com/Delexoo/quoteai.org/refs/heads/main/docs/J.png" 
                                  alt="Profile" class="profile-pic">
                             <div class="supporter-info">
                                 <!-- NAME: Replace with actual supporter name -->
@@ -986,7 +986,7 @@
                     <div class="leaderboard-entry">
                         <div class="rank-badge">2</div>
                         <div class="profile-section">
-                            <img src="https://github.com/Delexoo/quoteai.org/blob/main/duck.png?raw=true" 
+                            <img src="https://github.com/Delexoo/quoteai.org/blob/main/docs/duck.png?raw=true" 
                                  alt="Profile" class="profile-pic">
                             <div class="supporter-info">
                                 <h3 class="supporter-name">Bri</h3>
